--- a/src/epub/text/the-bibulous-business-of-a-matter-of-taste.xhtml
+++ b/src/epub/text/the-bibulous-business-of-a-matter-of-taste.xhtml
@@ -20,14 +20,15 @@
 				<p>Verneuil-sur-Eure</p>
 			</blockquote>
 			<p>and bore witness to its itinerary thus:</p>
-<blockquote>
-			<p>London⁠—Paris</p>
-			<p>(Waterloo) (Gare <abbr>St.</abbr> Lazare)<br/>via Southampton-Havre</p>
+			<blockquote>
+				<p>London⁠—Paris</p>
+				<p>(Waterloo) (Gare <abbr>St.</abbr> Lazare)<br/>
+				via Southampton-Havre</p>
 			</blockquote>
 			<blockquote>
-			<p>Paris⁠—Verneuil</p>
-			<p>(<abbr>Ch.</abbr> de Fer de l’Ouest)</p>
-</blockquote>
+				<p>Paris⁠—Verneuil</p>
+				<p>(<abbr>Ch.</abbr> de Fer de l’Ouest)</p>
+			</blockquote>
 			<p>The young man whistled, and sat down on a trunk to think it out.</p>
 			<p>Somewhere there had been a leakage, and they were on his trail. Nor did they care who knew it. There were hundreds of people in London and Paris who would know the name of Wimsey, not counting the police of both countries. In addition to belonging to one of the oldest ducal families in England, Lord Peter had made himself conspicuous by his meddling with crime detection. A label like this was a gratuitous advertisement.</p>
 			<p>But the amazing thing was that the pursuers were not troubling to hide themselves from the pursued. That argued very great confidence. That he should have got into the guard’s van was, of course, an accident, but, even so, he might have seen it on the platform, or anywhere.</p>
