--- a/src/epub/text/the-entertaining-episode-of-the-article-in-question.xhtml
+++ b/src/epub/text/the-entertaining-episode-of-the-article-in-question.xhtml
@@ -108,7 +108,7 @@
 			<p>Instantly the house was in an uproar. The servants and the caterers’ men crowded into the hall; the bride’s father burst out from his room in a magnificent white waistcoat and no coat; the Duchess of Medway descended upon <abbr>Mr.</abbr> Parker, demanding that something should be done; while the butler, who never to the day of his death got over the disgrace, ran out of the pantry with a corkscrew in one hand and a priceless bottle of crusted port in the other, which he shook with all the vehemence of a town-crier ringing a bell. The only dignified entry was made by the dowager duchess, who came down like a ship in sail, dragging Célestine with her, and admonishing her not to be so silly.</p>
 			<p>“Be quiet, girl,” said the dowager. “Anyone would think you were going to be murdered.”</p>
 			<p>“Allow me, your grace,” said <abbr>Mr.</abbr> Bunter, appearing suddenly from nowhere in his usual unperturbed manner, and taking the agitated Célestine by the arm. “Young woman, calm yourself.”</p>
-			<p>“But what is to be <em>done</em>?’’ cried the bride’s mother. “How did it happen?”</p>
+			<p>“But what is to be <em>done</em>?” cried the bride’s mother. “How did it happen?”</p>
 			<p>It was at this moment that Detective-Inspector Parker took the floor. It was the most impressive and dramatic moment in his whole career. His magnificent calm rebuked the clamorous nobility surrounding him.</p>
 			<p>“Your grace,” he said, “there is no cause for alarm. Our measures have been taken. We have the criminals and the gems, thanks to Lord Peter Wimsey, from whom we received inf⁠—”</p>
 			<p>“Charles!” said Lord Peter in an awful voice.</p>
