--- a/src/epub/text/the-learned-adventure-of-the-dragons-head.xhtml
+++ b/src/epub/text/the-learned-adventure-of-the-dragons-head.xhtml
@@ -155,11 +155,13 @@
 			<p>“God bless my soul! Is it possible?”</p>
 			<p>“It’s pretty nearly certain, sir. Here’s what he says, written, you see, round the head of that sort of sea-dragon:</p>
 			<blockquote epub:type="z3998:verse">
-<p>
-<span><i xml:lang="la">Hic in capite draconis ardet perpetuo Sol.</i></span>
-<br/>
-<span>Here the sun shines perpetually upon the Dragon’s Head.</span>
-</p>
+				<p>
+					<span>
+						<i xml:lang="la">Hic in capite draconis ardet perpetuo Sol.</i>
+					</span>
+					<br/>
+					<span>Here the sun shines perpetually upon the Dragon’s Head.</span>
+				</p>
 			</blockquote>
 			<p>Rather doggy Latin⁠—sea-dog Latin, you might say, in fact.”</p>
 			<p>“I’m afraid,” said <abbr>Dr.</abbr> Conyers, “I must be very stupid, but I can’t see where that leads us.”</p>
