Changes on proof-reading story 11

--- a/src/epub/text/the-unsolved-puzzle-of-the-man-with-no-face.xhtml
+++ b/src/epub/text/the-unsolved-puzzle-of-the-man-with-no-face.xhtml
@@ -92,29 +92,40 @@
 			<p>“Excuse me, sir,” he said. “That was a very interesting suggestion of yours. My name is Winterbottom and I am investigating this case. Do you mind giving me your name? I might wish to communicate with you later on.”</p>
 			<p>“Certainly,” said the first-class passenger. “Always delighted to have a finger in any pie, don’t you know. Here is my card. Look me up any time you like.”</p>
 			<p>Detective-Inspector Winterbottom took the card and read the name:</p>
-			<p>Lord Peter Wimsey,</p>
-			<p>110A Picadilly.</p>
+			<blockquote>
+				<p>Lord Peter Wimsey,</p>
+				<p>110A Picadilly.</p>
+			</blockquote>
 			<p>The <i epub:type="se:name.publication.newspaper">Evening Views</i> vendor outside Piccadilly Tube Station arranged his placard with some care. It looked very well, he thought.</p>
 			<blockquote>
-				<p>Man With No Face Identified</p>
+				<p>Man With<br/>
+				No Face<br/>
+				Identified</p>
 			</blockquote>
 			<p>It was, in his opinion, considerably more striking than that displayed by a rival organ, which announced, unimaginatively:</p>
 			<blockquote>
-				<p>Beach Murder Victim Identified</p>
+				<p>Beach Murder<br/>
+				Victim<br/>
+				Identified</p>
 			</blockquote>
 			<p>A youngish gentleman in a grey suit who emerged at that moment from the Criterion Bar appeared to think so too, for he exchanged a copper for the <i epub:type="se:name.publication.newspaper">Evening Views</i>, and at once plunged into its perusal with such concentrated interest that he bumped into a hurried man outside the station and had to apologise.</p>
 			<p>The <i epub:type="se:name.publication.newspaper">Evening Views</i>, grateful to murderer and victim alike for providing so useful a sensation in the dead days after the Bank Holiday, had torn <abbr>Messrs.</abbr> Negretti &amp; Zambra’s rocketing thermometrical statistics from the “banner” position which they had occupied in the lunch edition, and substituted:</p>
 			<blockquote>
 				<p>“Faceless Victim of Beach Outrage Identified</p>
-				<p>Murder of Prominent Publicity Artist</p>
+				<p>⸻</p>
+				<p>Murder of Prominent<br/>
+				Publicity Artist</p>
+				<p>⸻</p>
 				<p>Police Clues</p>
 			</blockquote>
-			<p>“The body of a middle-aged man who was discovered, attired only in a bathing-costume and with his face horribly disfigured by some jagged instrument, on the beach at East Felpham last Monday morning, has been identified as that of <abbr>Mr.</abbr> Coreggio Plant, studio manager of <abbr>Messrs.</abbr> Crichton <abbr>Ltd.</abbr>, the well-known publicity experts of Holborn.</p>
-			<p>“<abbr>Mr.</abbr> Plant, who was forty-five years of age and a bachelor, was spending his annual holiday in making a motoring tour along the West Coast. He had no companion with him and had left no address for the forwarding of letters, so that, without the smart work of Detective-Inspector Winterbottom of the Westshire police, his disappearance might not in the ordinary way have been noticed until he became due to return to his place of business in three weeks time. The murderer had no doubt counted on this, and had removed the motorcar, containing the belongings of his victim, in the hope of covering up all traces of this dastardly outrage so as to gain time for escape.</p>
-			<p>“A rigorous search for the missing car, however, eventuated in its discovery in a garage at West Felpham, where it had been left for decarbonisation and repairs to the magneto. <abbr>Mr.</abbr> Spiller, the garage proprietor, himself saw the man who left the car, and has furnished a description of him to the police. He is said to be a small, dark man of foreign appearance. The police hold a clue to his identity, and an arrest is confidently expected in the near future.</p>
-			<p>“<abbr>Mr.</abbr> Plant was for fifteen years in the employment of <abbr>Messrs.</abbr> Crichton, being appointed Studio Manager in the latter years of the war. He was greatly liked by all his colleagues, and his skill in the layout and designing of advertisements did much to justify the truth of <abbr>Messrs.</abbr> Crichton’s well-known slogan. ‘Crichton’s for Admirable Advertising.’</p>
-			<p>The funeral of the victim will take place tomorrow at Golders Green Cemetery.</p>
-			<p>“(Pictures on Back Page.)”</p>
+			<blockquote>
+				<p>“The body of a middle-aged man who was discovered, attired only in a bathing-costume and with his face horribly disfigured by some jagged instrument, on the beach at East Felpham last Monday morning, has been identified as that of <abbr>Mr.</abbr> Coreggio Plant, studio manager of <abbr>Messrs.</abbr> Crichton <abbr>Ltd.</abbr>, the well-known publicity experts of Holborn.</p>
+				<p>“<abbr>Mr.</abbr> Plant, who was forty-five years of age and a bachelor, was spending his annual holiday in making a motoring tour along the West Coast. He had no companion with him and had left no address for the forwarding of letters, so that, without the smart work of Detective-Inspector Winterbottom of the Westshire police, his disappearance might not in the ordinary way have been noticed until he became due to return to his place of business in three weeks time. The murderer had no doubt counted on this, and had removed the motorcar, containing the belongings of his victim, in the hope of covering up all traces of this dastardly outrage so as to gain time for escape.</p>
+				<p>“A rigorous search for the missing car, however, eventuated in its discovery in a garage at West Felpham, where it had been left for decarbonisation and repairs to the magneto. <abbr>Mr.</abbr> Spiller, the garage proprietor, himself saw the man who left the car, and has furnished a description of him to the police. He is said to be a small, dark man of foreign appearance. The police hold a clue to his identity, and an arrest is confidently expected in the near future.</p>
+				<p>“<abbr>Mr.</abbr> Plant was for fifteen years in the employment of <abbr>Messrs.</abbr> Crichton, being appointed Studio Manager in the latter years of the war. He was greatly liked by all his colleagues, and his skill in the layout and designing of advertisements did much to justify the truth of <abbr>Messrs.</abbr> Crichton’s well-known slogan. ‘Crichton’s for Admirable Advertising.’</p>
+				<p>“The funeral of the victim will take place tomorrow at Golders Green Cemetery.</p>
+				<p>“(Pictures on Back Page.)”</p>
+			</blockquote>
 			<p>Lord Peter Wimsey turned to the back page. The portrait of the victim did not detain him long; it was one of those characterless studio photographs which establish nothing except that the sitter has a tolerable set of features. He noted that <abbr>Mr.</abbr> Plant had been thin rather than fat, commercial in appearance rather than artistic, and that the photographer had chosen to show him serious rather than smiling. A picture of East Felpham beach, marked with a cross where the body was found, seemed to arouse in him rather more than a casual interest. He studied it intently for some time, making little surprised noises. There was no obvious reason why he should have been surprised, for the photograph bore out in every detail the deductions he had made in the train. There was the curved line of sand, with a long spur of rock stretching out behind it into deep water, and running back till it mingled with the short, dry turf. Nevertheless, he looked at it for several minutes with close attention, before folding the newspaper and hailing a taxi; and when he was in the taxi he unfolded the paper and looked at it again.</p>
 			<hr/>
 			<p>“Your lordship having been kind enough,” said Inspector Winterbottom, emptying his glass rather too rapidly for true connoisseurship, “to suggest I should look you up in Town, I made bold to give you a call in passing. Thank you, I won’t say no. Well, as you’ve seen in the papers by now, we found that car all right.”</p>
@@ -285,7 +296,7 @@
 			<p>“I saw that two years ago at a show in Manchester, and I happened to remember the name of the dealer who bought it.”</p>
 			<p>Inspector Winterbottom gaped at the panel.</p>
 			<p>“But that’s East Felpham!” he exclaimed.</p>
-			<p>“Yes. It’s only signed T.C., but the technique is rather unmistakable, don’t you think?”</p>
+			<p>“Yes. It’s only signed <abbr epub:type="z3998:personal-name">T.C.</abbr>, but the technique is rather unmistakable, don’t you think?”</p>
 			<p>The inspector knew little about technique, but initials he understood. He looked from the portrait to the panel and back at Lord Peter.</p>
 			<p>“The painter⁠—”</p>
 			<p>“Crowder?”</p>
@@ -300,9 +311,14 @@
 			<p>“And then the man hailed him, in his smug, mincing voice. ‘Hullo!’ he said, ‘you here? How did you find my little bathing-place?’ And that was too much for the painter. He felt as if his last sanctuary had been invaded. He leapt at the lean throat⁠—it’s rather a stringy one, you may notice, with a prominent Adam’s apple⁠—an irritating throat. The water chuckled round their feet as they swayed to and fro. He felt his thumbs sink into the flesh he had painted. He saw, and laughed to see, the hateful familiarity of the features change and swell into an unrecognisable purple. He watched the sunken eyes bulge out and the thin mouth distort itself as the blackened tongue thrust through it⁠—I am not unnerving you, I hope?”</p>
 			<p>The inspector laughed.</p>
 			<p>“Not a bit. It’s wonderful, the way you describe things. You ought to write a book.”</p>
-			<p>“I sing but as the throstle sings,</p>
-			<p>Amid the branches dwelling,”</p>
-			<p>replied his lordship negligently, and went on without further comment.</p>
+			<blockquote epub:type="z3998:verse">
+				<p>
+					<span>“I sing but as the throstle sings,</span>
+					<br/>
+					<span>Amid the branches dwelling,”</span>
+				</p>
+			</blockquote>
+			<p class="continued">replied his lordship negligently, and went on without further comment.</p>
 			<p>“The painter throttled him. He flung him back on the sand. He looked at him, and his heart crowed within him. He stretched out his hand, and found a broken bottle, with a good jagged edge. He went to work with a will, stamping and tearing away every trace of the face he knew and loathed. He blotted it out and destroyed it utterly.</p>
 			<p>“He sat beside the thing he had made. He began to be frightened. They had staggered back beyond the edge of the water, and there were the marks of his feet on the sand. He had blood on his face and on his bathing-suit, and he had cut his hand with the bottle. But the blessed sea was still coming in. He watched it pass over the bloodstains and the footprints and wipe the story of his madness away. He remembered that this man had gone from his place, leaving no address behind him. He went back, step by step, into the water, and as it came up to his breast, he saw the red stains smoke away like a faint mist in the brown-blueness of the tide. He went wading and swimming and plunging his face and arms deep in the water, looking back from time to time to see what he had left behind him. I think that when he got back to the point and drew himself out, clean and cool, upon the rocks, he remembered that he ought to have taken the body back with him and let the tide carry it away, but it was too late. He was clean, and he could not bear to go back for the thing. Besides, he was late, and they would wonder at the hotel if he was not back in time for breakfast. He ran lightly over the bare rocks and the grass that showed no footprint. He dressed himself, taking care to leave no trace of his presence. He took the car, which would have told a story. He put his bicycle in the back seat, under the rugs, and he went⁠—but you know as well as I do where he went.”</p>
 			<p>Lord Peter got up with an impatient movement, and went over to the picture, rubbing his thumb meditatively over the texture of the painting.</p>
