[Editorial] Remove spurious capital on Town

--- a/src/epub/text/the-piscatorial-farce-of-the-stolen-stomach.xhtml
+++ b/src/epub/text/the-piscatorial-farce-of-the-stolen-stomach.xhtml
@@ -41,7 +41,7 @@
 			<p>“Time, too,” said Macpherson. “The burns are nearly dry, and there’s not much water in the Fleet.” He glanced out of the window to where the little river ran tinkling and skinkling over the stones at the bottom of the garden. “If only we get a few days’ rain now, there’ll be some grand fishing.”</p>
 			<p>“It <em>would</em> come just as I’ve got to go, naturally,” remarked Wimsey.</p>
 			<p>“Yes; can’t you stay a bit longer? I want to have a try for some sea-trout.”</p>
-			<p>“Sorry, old man, can’t be done. I must be in Town on Wednesday. Never mind. I’ve had a fine time in the fresh air and got in some good rounds of golf.”</p>
+			<p>“Sorry, old man, can’t be done. I must be in town on Wednesday. Never mind. I’ve had a fine time in the fresh air and got in some good rounds of golf.”</p>
 			<p>“You must come up another time. I’m here for a month⁠—getting my strength up for the exams and all that. If you can’t get away before I go, we’ll put it off till August and have a shot at the grouse. The cottage is always at your service, you know, Wimsey.”</p>
 			<p>“Many thanks. I may get my business over quicker than I think, and, if I do, I’ll turn up here again. When did you say your great-uncle died?”</p>
 			<p>Macpherson stared at him.</p>
